# synth-one-click

./: README.md  index.html  package.json  pnpm-lock.yaml  pubspec.yaml
.github/workflows/: release.yaml  release.yml
icon/: Icon.af
src/: App.vue  AppConfiguration.vue  CacheInformation.vue  CacheProgress.vue  ConfigUtils.ts  Dialog.vue  OneClick.vue  ToastContainer.vue  cache_event.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: beatmaps_cache.rs  discover_commands.rs  download.rs  lib.rs  main.rs
src-tauri/src/synthriderz/: mod.rs  playlist.rs
src/plugins/: event-bus.ts
src/synthriderz/types/: avatar.ts  beatmap.ts  beatmapper.ts  playlist.ts  stage.ts  tag.ts  user.ts
src/synthriderz/types/generic/: difficulty.ts  pagination.ts  visiblity.ts
