[package]
name = "synth-one-click"
version = "2.0.0"
description = "A One-Click Installer for Synthriderz"
authors = ["Mondanzo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synth_one_click_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
windows-registry = "0.6.1"
keyvalues-parser = "0.2.3"
tauri-plugin-http = "2"
tauri-plugin-upload = "2"
zip = "8.1.0"
tokio = "1.49.0"
